kubernetes/group-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group-service
  template:
    metadata:
      labels:
        app: group-service
    spec:
      containers:
      - name: group-service
        image: s1871242/group-service
        ports:
        - containerPort: 8080
