kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-service
  labels:
    app: frontend-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: frontend-service-service
    targetPort: 8080
    nodePort: 32700
  selector:
    app: frontend-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        image: s1871242/frontend-service
        ports:
        - containerPort: 8080
