kubernetes/join-link-service.yml
apiVersion: v1
kind: Service
metadata:
  name: join-link-service-service
  labels:
    app: join-link-service
spec:
  type: NodePort
  ports:
  - port: 8080
    name: join-link-service-service
    targetPort: 8080
    nodePort: 32752
  selector:
    app: join-link-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: join-link-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: join-link-service
  template:
    metadata:
      labels:
        app: join-link-service
    spec:
      containers:
      - name: join-link-service
        image: s1871242/join-link-service
        ports:
        - containerPort: 8080
