kubernetes/meeting-service.yml
apiVersion: v1
kind: Service
metadata:
  name: meeting-service-service
  labels:
    app: meeting-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: meeting-service-service
    targetPort: 8080
    nodePort: 32753
  selector:
    app: meeting-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meeting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meeting-service
  template:
    metadata:
      labels:
        app: meeting-service
    spec:
      containers:
      - name: meeting-service
        image: s1871242/meeting-service
        ports:
        - containerPort: 8080
