kubernetes/project-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-service-service
  labels:
    app: project-service
spec:
  type: NodePort
  ports:
  - port: 8080
    name: project-service-service
    targetPort: 8080
    nodePort: 32754
  selector:
    app: project-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      labels:
        app: project-service
    spec:
      containers:
      - name: project-service
        image: s1871242/project-service
        ports:
        - containerPort: 8080
