kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: colab.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service-service
                port:
                  number: 8080
          - path: /api/groups
            pathType: Prefix
            backend:
              service:
                name: group-service-service
                port:
                  number: 8080
          - path: /api/students
            pathType: Prefix
            backend:
              service:
                name: group-service-service
                port:
                  number: 8080
          - path: /api/projects
            pathType: Prefix
            backend:
              service:
                name: project-service-service
                port:
                  number: 8080
          - path: /api/projects/.*/goals/.*/meetings
            pathType: Prefix
            backend:
              service:
                name: meeting-service-service
                port:
                  number: 8080
